@@ -4,6 +4,10 @@ CHANGES.txt - 2009-02-03
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler did not redo Bonjour/DNS-SD registrations when updating
+	  them failed.
+	- The "authenticated" policy incorrectly required authentication for
+	  status operations.
 	- ppdOpen*() incorrectly loaded PPDs with multiple JobPatchFile
 	  keywords.
 	- The network backends no longer report the SNMP "offline" status bit
